<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_PBC_CTRL" Id="{4564032b-af76-49bb-be16-c03bd650ebdd}">
    <Declaration><![CDATA[TYPE T_PBC_CTRL :
STRUCT
	fbPbc_PtbDeStacker			: FB_PTB;
	fbPbc_PtbDeStacker_Umc		: FB_UMC;
	fbPbc_PtbBelt				: FB_PTB;
	fbPbc_PtbBelt_Umc			: FB_UMC;
	fbPbc_PtbBelt_Vpc			: FB_VPC;
	fbPbc						: FB_PBC;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>